# travel-agent

./: .gitignore  .prettierrc  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: config.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
